[package]
categories = ["science", "simulation", "science:physics"]
description = "Non-local qubits"
edition = "2021"
homepage = "https://github.com/marek-miller/qn"
keywords = ["quantum", "simulation", "qubit", "non-local"]
license = "MIT"
name = "qn"
readme = "README.md"
repository = "https://github.com/marek-miller/qn.git"
version = "0.1.1"

[dependencies]
num = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
