[package]
categories = ["science", "simulation"]
description = "Non-local qubits"
edition = "2021"
homepage = "https://github.com/marek-miller/qn"
keywords = ["quantum", "simulation", "qubit", "non-local"]
license = "MIT"
name = "qn"
readme = "README.md"
repository = "https://github.com/marek-miller/qn.git"
version = "0.1.3"

[dependencies]
num = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
